Remove redundant text

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -33,7 +33,7 @@
             aria-haspopup="true"
             aria-expanded="false">
             <%= icon("arrow-down-up", css_class: "text-slate-500", aria_hidden: true) %>
-            <span>Sort: <%= current_sort_label %> (<%= current_direction_hint %>)</span>
+            <span><%= current_sort_label %> (<%= current_direction_hint %>)</span>
             <%= icon("chevron-down", css_class: "text-xs text-slate-400", aria_hidden: true) %>
           </button>
           <div
