--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -11,6 +11,7 @@
       <% end %>
     </div>
     <div class="flex w-full items-center justify-between gap-3 sm:w-auto sm:justify-end">
+      <%# Sorting dropdown %>
       <% if @feeds.any? %>
         <div class="relative">
           <button
