--- a/app/views/layouts/tailwind.html.erb
+++ b/app/views/layouts/tailwind.html.erb
@@ -11,20 +11,7 @@
     <% end %>
 
     <main class="mx-auto w-full max-w-5xl px-4 py-8">
-      <div class="space-y-3" id="flash-messages">
-        <% if notice %>
-          <div class="ff-alert ff-alert--info alert" role="alert">
-            <span><%= sanitize(notice) %></span>
-          </div>
-        <% end %>
-
-        <% if alert %>
-          <div class="ff-alert ff-alert--error alert" role="alert">
-            <span><%= sanitize(alert) %></span>
-          </div>
-        <% end %>
-      </div>
-
+      <%= render "layouts/flash" %>
       <%= yield %>
     </main>
   </body>
