--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,4 +1,4 @@
-<div class="space-y-3" id="flash-messages">
+<div class="space-y-3 mb-4" id="flash-messages">
   <% if notice %>
     <div class="ff-alert ff-alert--info alert" role="alert">
       <span><%= sanitize(notice) %></span>
